--- a/Index.html
+++ b/Index.html
@@ -18,25 +18,56 @@
 <body>
 
     <!-- HEADER -->
-     <header>
-        <div class="header-pagina d-flex d-flex justify-content-around align-items-center">
-            <div>
-              <a href="Index.html">
-                <img class="logo " src="img/590-5903895_one-piece-monkey-d-luffy-anime-one-piece.png" alt="logo-rufy">
-              </a>
-<!--               <a href="Index.html">
-                <img class="logo" src="img/depositphotos_113825382-stock-illustration-initial-letter-lc-red-swoosh.jpg" alt="LC">
-              </a> -->
-            </div>
-            <div class="box-header">
+     <header class="sfondo-header">
 
-            </div>
-            
-            <div class="box-header">
+      <nav class="d-flex mx-2">
+        <div class="nav-bar d-flex align-items-center justify-content-between">
+          <div>
+            <a href="Index.html">
+              <img class="logo" src="img/590-5903895_one-piece-monkey-d-luffy-anime-one-piece.png" alt="">
+            </a>
+          </div>
 
-            </div>
+
+
+          <div class="box-nav d-flex align-items-center">
+            <h1>La mia collezione</h1>
+
+            <nav class="mt-3">
+              <ul class="d-sm-none d-md-block">
+                <li>
+                  <a href="#" target="_blank"><i class="fa-solid fa-user"></i> Luigi Casale</a>
+                </li>
+                <li>
+                  <a href="https://www.google.it/maps/place/41%C2%B015'32.9%22N+13%C2%B052'00.2%22E/@41.259125,13.8641481,17z/data=!3m1!4b1!4m4!3m3!8m2!3d41.259125!4d13.866723?entry=ttu&g_ep=EgoyMDI1MDgwNS4wIKXMDSoASAFQAw%3D%3D" target="_blank"><i class="fa-solid fa-location-dot"></i> San Castrese</a>
+                </li>
+                <li>
+                  <a href="https://sapere.virgilio.it/proverbi/aiutati-che-dio-t-aiuta-685" target="_blank"><i class="fa-solid fa-info"></i> Aiuto</a>
+                </li>
+              </ul>
+            </nav>
+
+          </div>
+
+
+<!--           <div class="box-nav">
+
+         </div> -->
+
+         <div class="box.nav">
+
+           <form class="flex-nowrap" action="#">
+            <input type="search" class="search-iput" placeholder="Cerca prodotto..." name="q">
+            <button type="submit" class="search-button text-light bg-primary p-md-2 rounded">Cerca</button>
+           </form>
+
+         </div>
+
+
+
 
         </div>
+      </nav>
 
      </header>
 
