--- a/Index.html
+++ b/Index.html
@@ -83,7 +83,7 @@
     <div class="col-tipologia col col-sm-12 col-md-6">
 
       <div class="tipologia">
-          <a class="text-black" href="#">
+          <a class="text-black" href="Altre-pagine/seinen/seinen.html">
         <section class="box-img mb-2 mt-2">
           <img class="img-card" src="img/seinen collage.jpg_large" alt="seinen-collage">
         </section>
