creazione pagina descrizione manga

--- a/Index.html
+++ b/Index.html
@@ -34,19 +34,19 @@
 
 
 
-          <div class="box-nav d-flex align-items-center">
-            <h1 class="text-light">La mia collezione</h1>
+          <div class="box-nav d-flex align-items-center text-black">
+            <h1 class="text-black">La mia collezione</h1>
 
             <nav class="mt-3">
               <ul class="d-sm-none d-md-block">
                 <li>
-                  <a href="#" target="_blank"><i class="fa-solid fa-user"></i> Luigi Casale</a>
+                  <a class="text-black" href="#" target="_blank"><i class="fa-solid fa-user"></i> Luigi Casale</a>
                 </li>
                 <li>
-                  <a href="https://www.google.it/maps/place/41%C2%B015'32.9%22N+13%C2%B052'00.2%22E/@41.259125,13.8641481,17z/data=!3m1!4b1!4m4!3m3!8m2!3d41.259125!4d13.866723?entry=ttu&g_ep=EgoyMDI1MDgwNS4wIKXMDSoASAFQAw%3D%3D" target="_blank"><i class="fa-solid fa-location-dot"></i> San Castrese</a>
+                  <a class="text-black" href="https://www.google.it/maps/place/41%C2%B015'32.9%22N+13%C2%B052'00.2%22E/@41.259125,13.8641481,17z/data=!3m1!4b1!4m4!3m3!8m2!3d41.259125!4d13.866723?entry=ttu&g_ep=EgoyMDI1MDgwNS4wIKXMDSoASAFQAw%3D%3D" target="_blank"><i class="fa-solid fa-location-dot"></i> San Castrese</a>
                 </li>
                 <li>
-                  <a href="https://sapere.virgilio.it/proverbi/aiutati-che-dio-t-aiuta-685" target="_blank"><i class="fa-solid fa-info"></i> Aiuto</a>
+                  <a class="text-black" href="https://sapere.virgilio.it/proverbi/aiutati-che-dio-t-aiuta-685" target="_blank"><i class="fa-solid fa-info"></i> Aiuto</a>
                 </li>
               </ul>
             </nav>
@@ -74,7 +74,7 @@
       <main>
 <div class="container">
 
- <h1 class="text-center text-light bg-black rounded-bottom-5 pb-1">Diveri tipi di lettura</h1>
+ <h1 class="titolo-tipologie text-center text-light bg-black rounded-bottom-5 pb-1">Diveri tipi di lettura</h1>
           
   <div class="container">
 
