Completamento seinen/pagina berserk con l'aiuito di grid

--- a/Index.html
+++ b/Index.html
@@ -78,11 +78,11 @@
           
   <div class="container">
 
-   <div class="row justify-content-center mt-2 pb-5">
+   <div class="grid-tipologia"> <!-- row justify-content-center mt-2 pb-5 -->
 
-    <div class="col-tipologia col col-sm-12 col-md-6">
+    <div class="col-tipologia"> <!-- col-tipologia col col-sm-12 col-md-6 -->
 
-      <div class="tipologia">
+      <div class="tipologia p-2">
           <a class="text-black" href="Altre-pagine/seinen/seinen.html">
         <section class="box-img mb-2 mt-2">
           <img class="img-card" src="img/seinen collage.jpg_large" alt="seinen-collage">
@@ -95,9 +95,9 @@
     </div>
      </div>
 
-    <div class="col-tipologia col col-sm-12 col-md-6">
+    <div class="col-tipologia">
 
-       <div class="tipologia">
+       <div class="tipologia p-2">
           <a class="text-black" href="#">
         <section class="box-img mb-2 mt-2">
           <img class="img-card" src="img/shounen collage.webp" alt="seinen-collage">
@@ -109,9 +109,9 @@
       </div>
      </div>
 
-    <div class="col-tipologia col col-sm-12 col-md-6">
+    <div class="col-tipologia">
 
-       <div class="tipologia">
+       <div class="tipologia p-2">
          <a class="text-black" href="#">
         <section class="box-img mb-2 mt-2">
           <img class="img-card" src="img/americani sandman collage.webp" alt="seinen-collage">
@@ -123,9 +123,9 @@
       </a>
     </div>
 
-    <div class="col-tipologia col col-sm-12 col-md-6">
+    <div class="col-tipologia">
 
-       <div class="tipologia">
+       <div class="tipologia p-2">
          <a class="text-black" href="#">
         <section class="box-img mb-2 mt-2">
           <img class="img-card" src="img/zerocalcare.webp" alt="seinen-collage">
